added author info.

--- a/handson2/benchmarks.ipynb
+++ b/handson2/benchmarks.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CSE 5311 - 006 - Hands On 2\n",
+    "# Student Number: 1002226596\n",
+    "# Student Email: sxa6596@mavs.uta.edu"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
